platform/multiple-gateways/gateway-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
  creationTimestamp: "2020-03-19T14:40:26Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: gloo
    gateway-proxy-id: gateway-proxy
    gloo: gateway-proxy
  name: gateway-proxy
  namespace: gloo-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 30517
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: http-2
    port: 81
    protocol: TCP
    targetPort: 10080
  - name: https
    nodePort: 32696
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    gateway-proxy: live
    gateway-proxy-id: gateway-proxy
  sessionAffinity: None
  type: LoadBalancer
