platform/multiple-gateways/gateway-1.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway:
    virtualServices:
      - name: echo-1
        namespace: gloo-system
  proxyNames:
  - gateway-proxy
  useProxyProto: false
