platform/multiple-gateways/vs-1.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo-1
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-echo-1-80
              namespace: gloo-system
