platform/multiple-gateways/vs-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo-2
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-echo-2-80
              namespace: gloo-system
